# unidaw

./: .gitignore  AGENTS.md  CMakeLists.txt  DEVICE_CHAIN.md  DEVICE_CHAIN_PATCHER_UX.md  PATCHER.md  PATCHER_IMPL_PLAN.md  PATCHER_TEST_PLAN.md  PLAN.md  PROJECT_PERSISTENCE.md  README.md  SHM_LAYOUT.md  ZOOMEDITINGPLAN.md
apps/: audio_shm.cpp  audio_shm.h  automation_clip.h  chord_resolver.cpp  chord_resolver.h  clip_edit.cpp  clip_edit.h  daw_engine_main.cpp  device_chain.cpp  device_chain.h  device_chain_tests_main.cpp  device_chain_ui_live_tests_main.cpp  device_chain_ui_tests_main.cpp  event_payloads.h  event_ring.cpp  event_ring.h  harmony_timeline.cpp  harmony_timeline.h  host_controller.cpp  host_controller.h  ipc_io.cpp  ipc_io.h  ipc_protocol.h  juce_engine_process_main.cpp  juce_host_main.cpp  juce_host_process_main.cpp  juce_scan_main.cpp  juce_scan_worker.cpp  juce_scan_worker.h  latency_manager.h  modulation.h  musical_structures.h  patcher_abi.cpp  patcher_abi.h  patcher_graph.cpp  patcher_graph.h  patcher_graph_tests_main.cpp  patcher_preset.cpp  patcher_preset.h  patcher_preset_library.cpp  (+20 more)
patcher_rust/: Cargo.toml
patcher_rust/src/: lib.rs
platform_juce/: juce_wrapper.cpp  juce_wrapper.h  uid_utils.cpp  uid_utils.h
plugins/identity/: IdentityProcessor.cpp  IdentityProcessor.h
ui/: Cargo.toml
ui/daw-app/: Cargo.toml
ui/daw-app/src/: app.rs  clipboard.rs  commands.rs  harmony.rs  lib.rs  main.rs  palette.rs  plugins.rs  scale_browser.rs  selection.rs  state.rs  util.rs
ui/daw-app/src/engine/: bridge.rs  mod.rs  supervisor.rs
ui/daw-app/src/tracker/: mod.rs
ui/daw-app/src/ui/: actions.rs  mod.rs  render_device_chain.rs  render_minimap.rs  render_overlay.rs  render_palette.rs  render_patcher.rs  render_scale_browser.rs  render_tracker.rs
ui/daw-app/tests/: engine_integration.rs  reproduce_bugs.rs
ui/daw-bridge/: Cargo.toml
ui/daw-bridge/src/: layout.rs  reader.rs
ui/daw-cli/: Cargo.toml
ui/daw-cli/src/: main.rs
